force-app/main/default/objects/Projects_of_Interest__c/Projects_of_Interest__c.object-meta.xml
<CustomObject>
    <description>LOP CRM customer object to capture Lead interest in Projects.</description>
    <label>Projects of Interest</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Projects of Interest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects of Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>