force-app/main/default/objects/Projects_of_Interest__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Leads_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>