force-app/main/default/objects/Projects_of_Interest__c/fields/LOP_Registered_User_Name__c.field-meta.xml
<CustomField>
    <fullName>LOP_Registered_User_Name__c</fullName>
    <formula>Lead__r.LOP_Registered_User__r.FirstName + &quot; &quot; +   Lead__r.LOP_Registered_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOP Registered User Name</label>
    <type>Text</type>
</CustomField>